--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,11 @@ inputs:
     description: >-
       Directory that contains actions-runner software and scripts. E.g. /home/runner/actions-runner.
     required: false
+  count:
+    description: >-
+      ECS instance count, defaults to 1
+    required: false
+    default: '1'
 outputs:
   label:
     description: >-
@@ -76,6 +81,9 @@ outputs:
     description: >-
       EC2 Instance Id of the created runner.
       The id is used to terminate the EC2 instance when the runner is not needed anymore.
+  spawned-count:
+    description: >-
+      Spawned runners installed in the instance
 runs:
   using: node12
   main: ./dist/index.js
