--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: On-demand self-hosted AWS EC2 runners for GitHub Actions
-description: GitHub Action for automatic creation and registration AWS EC2 instance with multiple self-hosted runners, based on Volodymyr Machula's work
+description: Automatic creation of an AWS EC2 instance with multiple self-hosted runners, based on Volodymyr Machula's work
 author: Yatima Santamorena
 branding:
   icon: 'box'
