--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -24,5 +24,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git add dist/
+          git tag windows-experimental
+          git push origin windows-experimental
           git commit -m "Update dist" || echo "No changes to commit"
           git push origin main
