--- a/action.yml
+++ b/action.yml
@@ -70,6 +70,10 @@ inputs:
       ECS instance count, defaults to 1
     required: false
     default: '1'
+  spawned-count:
+    description: >-
+      Spawned runners installed in the instance
+    required: false
 outputs:
   label:
     description: >-
