--- a/action.yml
+++ b/action.yml
@@ -77,6 +77,9 @@ inputs:
     description: >-
       Spawned runners installed in the instance
     required: false
+  timeout-ms:
+    description: The timeout interval in MS to wait before checking if the runner is active. Defaults to 30s
+    required: false
 outputs:
   label:
     description: >-
